# cookiecutter-research-project-pdoc

./: README.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: MANIFEST.in  Makefile  README.md  README.rst  config.yml  environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.pdoc/: custom.css  theme.css
{{cookiecutter.project_slug}}/docs/: Makefile  api-io.rst  api.rst  conf.py  index.md  index.rst  overview.md  syntax.md
{{cookiecutter.project_slug}}/md/: overview.md
{{cookiecutter.project_slug}}/notebooks/: nb_template.ipynb  nb_template.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  io.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
